force-app/main/default/objects/LeanData__LD_Journey_Member__c/LeanData__LD_Journey_Member__c.object-meta.xml
<CustomObject>
    <label>LeanData Journey Member</label>
    <nameField>
        <label>LeanData Journey Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LeanData Journey Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>