force-app/main/default/objects/LeanData__LD_Journey_Member__c/fields/LeanData__Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Contact_Role__c</fullName>
    <externalId>true</externalId>
    <label>Contact Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>