force-app/main/default/objects/LeanData__LD_Journey_Member__c/fields/LeanData__Created_From_Linked_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Created_From_Linked_Opportunity__c</fullName>
    <label>Created From Linked Opportunity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>