force-app/main/default/objects/LeanData__LD_Journey_Member__c/fields/LeanData__First_Sales_Signal_Date__c.field-meta.xml
<CustomField>
    <fullName>LeanData__First_Sales_Signal_Date__c</fullName>
    <label>First Sales Signal Date</label>
    <type>DateTime</type>
</CustomField>